<resources>
    <string name="app_name">Microformas</string>
    <string name="version_title_prod">Versión</string>
    <string name="version_title_test">Versión - TEST</string>
    <string name="version_value_prod">2.0.1</string>
    <string name="version_value_test">2.0.1</string>
    <string name="title_activity_login">Inicio de Sesión</string>
    <string name="dummy_title">Dummy Title</string>
    <string name="dummy_desc">This is a good dummy text in order to test the app design.</string>
    <string name="base_warehouse">Almacén:</string>
    <string name="base_engineers">Ingeniero:</string>
    <string name="base_client">Cliente:</string>
    <string name="base_supply">Insumo:</string>
    <string name="base_count">Cantidad:</string>
    <string name="base_no_serie">No. Serie:</string>
    <string name="base_no_guide">No. Guía:</string>
    <string name="base_date">Fecha:</string>
    <string name="base_priority">Prioridad:</string>
    <string name="base_messaging">Mensajería:</string>
    <string name="base_yes">Si</string>
    <string name="base_no">No</string>
    <string name="base_low">Baja</string>
    <string name="base_medium">Media</string>
    <string name="base_high">Alta</string>
    <string name="base_update">Actualizar</string>
    <string name="base_search">Buscar</string>
    <string name="base_accept">Aceptar</string>
    <string name="base_send">Enviar</string>
    <string name="base_plus">+</string>
    <string name="base_search_warehouse">Buscar Almacén</string>
    <string name="base_search_engineers">Buscar Ingenieros</string>
    <string name="base_desc_status_icon">Status de solicitud</string>
    <string name="title_activity_main">Microformas</string>
    <string name="title_activity_nuevas">Solicitudes Nuevas</string>
    <string name="title_activity_abiertas">Solicitudes Abiertas</string>
    <string name="title_activity_request_list">Nuevas</string>
    <string name="title_activity_request_detail">Nuevas</string>
    <string name="title_activity_viaticos">Viáticos</string>
    <string name="title_activity_viaticos_list">Viáticos</string>
    <string name="title_activity_refacciones">Refacciones</string>
    <string name="title_activity_phototaking">Fotografía</string>
    <string name="title_activity_terms">Terminos y Condiciones</string>
    <string name="title_activity_comment">Comentario</string>
    <string name="title_activity_refacciones_catalogs">Agregar</string>
    <string name="title_activity_cierre">Cierre por Exito</string>
    <string name="title_activity_cierre_rechazo">Cierre por Rechazo</string>
    <string name="title_activity_sustitucion">Sustitución</string>
    <string name="title_activity_unidad_instalacion_catalogs">Buscar Unidad de Instalación</string>
    <string name="title_activity_refaccion_instalacion_catalogs">Buscar Refacción de Instalación</string>
    <string name="title_activity_instalacion">Instalación</string>
    <string name="title_activity_substitutions">Sustituciones</string>
    <string name="title_activity_look_for">Lista de Insumos</string>
    <string name="title_activity_retiro">Retiro</string>
    <string name="title_activity_actualizacion">Actualización</string>
    <string name="title_activity_informacion_cierre">Información de Cierre</string>
    <string name="title_activity_agregar_unidad">Agregar Unidad</string>
    <string name="title_activity_agregar_unidad_negocio">Agregar Unidad al Negocio</string>
    <string name="title_activity_geo_localizacion">GeoLocalización</string>
    <string name="title_activity_nuevo_envio">Unidades a Enviar</string>
    <string name="title_activity_inventario">Inventario</string>
    <string name="title_activity_inventory_search_result">Resultado de Busqueda</string>
    <string name="title_activity_unidad_detail">Detalle de Unidad</string>
    <string name="title_activity_agregar_unidad_enviar">Agregar Unidad</string>
    <string name="title_activity_agregar_refaccion">Agregar Refacción</string>
    <string name="title_activity_ver_refacciones">Ver Refacciones</string>
    <string name="title_activity_pendings_list">Bandeja de Envios</string>
    <string name="title_activity_refacciones_unidad">Refacciones Unidad</string>
    <string name="title_activity_file_browser">Navegador de Archivos</string>
    <string name="title_activity_log_comentario">Ver Comentario</string>
    <string name="title_activity_agregar_refaccion_unidad">Agregar Refacción Unidad</string>
    <string name="title_activity_terminal">Pendiente (Terminal)</string>
    <string name="title_activity_terminal_list">Terminal [Almacenes]</string>
    <string name="title_activity_spare_part">Pendiente (Spare Parts)</string>
    <string name="title_activity_pendiente_insumo">Pendiente (Insumo)</string>
    <string name="title_activity_spare_part_list">Spare Part [Spare Part]</string>
    <string name="title_activity_pendiente_insumo_list">Insumo [Almacen]</string>
    <string name="title_activity_example">Example</string>
    <string name="title_activity_time_and_date">TimeAndDate</string>
    <string name="title_activity_server">Opciones de Servidor</string>
    <string name="title_activity_new_shipment">Nuevo Envío</string>
    <string name="title_activity_new_shipment_search">Busqueda</string>
    <string name="title_activity_new_shipment_search_insumo">Buscar Insumo</string>
    <string name="title_activity_new_shipment_search_sim">Buscar SIM</string>
    <string name="title_activity_inventory">Inventario</string>
    <string name="title_activity_inventory_supplies">InventorySuppliesActivity</string>
    <string name="title_activity_inventory_unit_search_detail">Detalle de busqueda</string>
    <string name="title_activity_receptions_list">Envíos Recibidos</string>
    <string name="title_activity_shipment_detail">Detalle de Envío</string>
    <string name="title_activity_process_shipment_list">Envíos Pendientes</string>
    <string name="title_activity_inventory_movements">Movimientos de Inventario</string>
    <string name="title_activity_inventory_movement_supply">Insumo</string>
    <string name="title_activity_insert_new_movement_supply">Insertar Insumo</string>
    <string name="title_activity_causa_retiro">Causas de Retiro</string>
    <string name="section_inv_units">Unidades</string>
    <string name="section_inv_supplies">Supplies</string>
    <string name="login_desc_logo">Microformas</string>
    <string name="login_welcome">Por favor, ingrese su usuario y contraseña</string>
    <string name="login_user">Usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_button">Ingresar</string>
    <string name="login_check_user">Recordar usuario</string>
    <string name="login_check_pass">Recordar usuario y contraseña</string>
    <string name="login_recovery">Recuperar contraseña</string>
    <string name="server_text_test">URL Pruebas:</string>
    <string name="server_text_live">URL Producción:</string>
    <string name="main_news_text">Nuevas</string>
    <string name="main_opened_text">Abiertas</string>
    <string name="main_closed_text">Cerradas</string>
    <string name="main_pending_text">Pendientes</string>
    <string name="main_units_text">Inventario</string>
    <string name="main_inbox_text">Bandeja</string>
    <string name="main_update_text">Actualizaciones</string>
    <string name="main_docs_text">Documentos</string>
    <string name="menu_test">App Pruebas</string>
    <string name="menu_prod">App Producción</string>
    <string name="menu_settings">Configuración</string>
    <string name="menu_logout">Cerrar Sesión</string>
    <string name="menu_logout_question">¿Desea cerrar su sesión?</string>
    <string name="menu_update">Forzar actualización</string>
    <string name="menu_update_question">¿Desea actualizar los catálogos y solicitudes?</string>
    <string name="menu_version">Ver Versión</string>
    <string name="menu_server">Servidor</string>
    <string name="menu_password">Recuperar Contraseña</string>
    <string name="inventory_destination">Destino:</string>
    <string name="inventory_guide">No. de Guía:</string>
    <string name="terminal_button_add_terminal">AGREGAR TERMINAL</string>
    <string name="terminal_searching_title">Agregar Terminal</string>
    <string name="terminal_button_local">LOCAL</string>
    <string name="terminal_button_baja">BAJA</string>
    <string name="terminal_list_button_add">AGREGAR ALMACEN</string>
    <string name="terminal_button_add">Agregar</string>
    <string name="refaccion_button_add_refaccion">AGREGAR REFACCIÓN</string>
    <string name="refaccion_searching_title">Agregar Refacción</string>
    <string name="refaccion_searching_moneda">Moneda</string>
    <string name="refaccion_searching_costo">Costo:</string>
    <string name="refaccion_searching_pesos">PESOS</string>
    <string name="insumo_button_add_insumo">AGREGAR INSUMO</string>
    <string name="insumo_searching_title">Agregar Insumo</string>
	<string name="title_clave_rechazo">Clave Rechazo:</string>
	<string name="title_no_sim">No. SIM:</string>
    <string name="nueva_version">Hay una nueva versión de Microformas</string>
    <string name="descargar_version">Es necesario descargar la nueva versión para continuar</string>
    <string name="ok">Aceptar</string>
    <string name="ok_mayus">ACEPTAR</string>
    <string name="hint_password">Ingresar password</string>
    <string name="request_detail_approve">Aprobar solicitud</string>
    <string name="request_detail_initial_text">(sin información)</string>
    <string name="nuevo_nuevoenvio_menu">Nuevo Envío</string>
    <string name="nuevo_enviosproceso_menu">Envíos en Proceso</string>
    <string name="nuevo_recepciones_menu">Recepciones</string>
    <string name="nuevo_mensajeria_text">Mensajería: </string>
    <string name="nuevo_prioridad_text">Prioridad: </string>
    <string name="nuevo_agregarunidad_button">Agregar Unidades</string>
    <string name="nuevo_enviara_text">Enviar a: </string>
    <string name="nuevo_noguia_text">No. Guia: </string>
    <string name="nuevo_costo_text">Costo: </string>
    <string name="nuevo_enviar_button">Enviar</string>
    <string name="nuevo_almacen_text">(no asignado)</string>
    <string name="nuevo_ingenieros_text">(no asignado)</string>
    <string name="nuevo_almacen_button">Buscar Almacén</string>
    <string name="nuevo_ingenieros_button">Buscar Ingenieros</string>
    <string name="inventario_no_serie_menu_button_text">Buscar por Número de Serie</string>
    <string name="inventario_modelo_menu_button_text">Buscar por Modelo</string>
    <string name="inventario_cliente_menu_button_text">Buscar por Cliente</string>
    <string name="logcom_usuario_text">Usuario: </string>
    <string name="logcom_fecha_text">Fecha: </string>
    <string name="logcom_comentario_text">Comentario: </string>
    <string name="terminal_enviar_button">ENVIAR </string>
    <string name="terminal_almacen_button">BUSCAR ALMACÉN</string>
    <string name="terminal_direcciones_text">Dirección: </string>
    <string name="terminal_tiposervicio_text">Tipo de Servicio: </string>
    <string name="terminal_urgencia_text">Prioridad: </string>
    <string name="terminal_text_storage">Almacén: </string>
    <string name="terminal_text_brand">Marca: </string>
    <string name="terminal_text_model">Modelo: </string>
    <string name="terminal_text_count">Cantidad: </string>
    <string name="terminal_text_notes">Notas: </string>
    <string name="terminal_text_commitment">Compromiso: </string>
    <string name="terminal_button_brand">Buscar Marca</string>
    <string name="terminal_button_model">Buscar Modelo</string>
    <string name="terminal_button_connectivity">Buscar Conectividad</string>
    <string name="terminal_button_application">Buscar Aplicativo</string>
    <string name="sparepart_sparepart_text">Spare Part: </string>
    <string name="sparepart_sparepart_button">Buscar Spare Part</string>
</resources>