<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevoEnvioActivity" >

    <ScrollView android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    
    	<LinearLayout
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:orientation="vertical" >

        	<ListView
	            android:id="@+id/nuevoUnidadesListView"
            	android:layout_width="wrap_content"
            	android:layout_height="1dp" >
        	</ListView>
	
        	<LinearLayout
	            android:layout_width="match_parent"
            	android:layout_height="wrap_content" >
	
            	<Button
	                android:id="@+id/nuevoAgregarUnidadesButton"
                	android:layout_width="wrap_content"
                	android:layout_height="64dp"
                	android:layout_weight="0.50"
                	android:text="@string/nuevo_agregarunidad_button" />
        	</LinearLayout>
	
        	<TextView
	            android:id="@+id/nuevoEnviarATextView"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/nuevo_enviara_text"
            	android:visibility="gone"
            	android:textAppearance="?android:attr/textAppearanceLarge" />
	
        	<Spinner
	            android:id="@+id/nuevoEnviarASpinner"
            	android:layout_width="match_parent"
            	android:visibility="gone"
            	android:layout_height="wrap_content" />
	
        	<TextView
	            android:id="@+id/nuevoAlmacenTextView"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/nuevo_almacen_text"
            	android:visibility="gone"
            	android:textAppearance="?android:attr/textAppearanceLarge" />
	
        	<Button
	            android:id="@+id/nuevoAlmacenButton"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:visibility="gone"
            	android:text="@string/nuevo_almacen_button" />
	
        	<TextView
	            android:id="@+id/nuevoIngenieroTextView"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/nuevo_ingenieros_text"
            	android:visibility="gone"
            	android:textAppearance="?android:attr/textAppearanceLarge" />
	
        	<Button
	            android:id="@+id/nuevoIngenieroButton"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:visibility="gone"
            	android:text="@string/nuevo_ingenieros_button" />
	
        	<TextView
	            android:id="@+id/nuevoMensajeriaTextView"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/nuevo_mensajeria_text"
            	android:visibility="gone"
            	android:textAppearance="?android:attr/textAppearanceLarge" />
	
        	<Spinner
	            android:id="@+id/nuevoMensajeriaSpinner"
            	android:layout_width="match_parent"
            	android:visibility="gone"
            	android:layout_height="wrap_content" />
	
        	<TextView
	            android:id="@+id/nuevoNoGuiaTextView"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/nuevo_noguia_text"
            	android:visibility="gone"
            	android:textAppearance="?android:attr/textAppearanceLarge" />
	
        	<EditText
	            android:id="@+id/nuevoNoGuiaEditText"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:ems="10"
            	android:visibility="gone"
            	android:inputType="number" />
	
        	<TextView
	            android:id="@+id/nuevoCostoTextView"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/nuevo_costo_text"
            	android:visibility="gone"
            	android:textAppearance="?android:attr/textAppearanceLarge" />
	
        	<EditText
	            android:id="@+id/nuevoCostoEditText"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:ems="10"
            	android:visibility="gone"
            	android:inputType="numberDecimal" />

        	<LinearLayout
	            android:layout_width="match_parent"
            	android:layout_height="wrap_content" >
	
            	<TextView
	                android:id="@+id/nuevoPrioridadTextView"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:text="@string/nuevo_prioridad_text"
                	android:textAppearance="?android:attr/textAppearanceLarge"
                	android:visibility="gone" />
	
            	<Button
	                android:id="@+id/nuevoPrioridadButton"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:visibility="gone" />
	
        		</LinearLayout>
	
        	<Button
	           	android:id="@+id/nuevoEnviarButton"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:visibility="gone"
            	android:text="@string/nuevo_enviar_button" />
    	</LinearLayout>
    </ScrollView>
</RelativeLayout>