<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TerminalActivity" >

    <ScrollView android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/sparepartAlmacenTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terminal_text_storage"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/sparepartAlmacenTextViewContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_detail_initial_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/sparepartSparePartTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sparepart_sparepart_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/sparepartSparePartTextViewContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/request_detail_initial_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/sparepartAlmacenButton"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:text="@string/terminal_almacen_button" />

            <Button
                android:id="@+id/uselessButton"
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="@string/terminal_button_brand" />

            <Button
                android:id="@+id/sparepartSparePartButton"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:text="@string/sparepart_sparepart_button" />
        </LinearLayout>

        <TextView
            android:id="@+id/sparepartCantidadTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terminal_text_count"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/sparepartCantidadEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:maxLength="4" />

        <TextView
            android:id="@+id/sparepartNotasTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terminal_text_notes"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/sparepartNotasEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/sparepartDireccionesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terminal_direcciones_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/sparepartDireccionesSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp" >

            <TextView
                android:id="@+id/sparepartTipoServicioTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terminal_tiposervicio_text"
                android:layout_weight=".5"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/uselessText"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:text="Large Text"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="invisible" />

            <Button
                android:id="@+id/sparepartTipoServicioButton"
                android:layout_width="83dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="LOCAL" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/sparepartUrgenciaTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terminal_urgencia_text"
                android:layout_weight=".5"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/uselessText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Large Text"
                android:visibility="invisible"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/sparepartUrgenciaButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="BAJA" />
        </LinearLayout>

        <TextView
            android:id="@+id/sparepartCompromisoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/terminal_text_commitment"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <com.artefacto.microformas.uicomponents.DateButton
            	android:id="@+id/sparepartFechaCompromisoDateButton"
            	android:layout_width="wrap_content"
            	android:visibility="gone"
            	android:layout_height="wrap_content" />

        <Button
            android:id="@+id/sparepartEnviarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terminal_enviar_button" />
    </LinearLayout>
	</ScrollView>
    
</RelativeLayout>