<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchingTerminalActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/searching_terminal_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <TextView
            android:id="@+id/searching_terminal_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:textSize="@dimen/base_toolbar_title"
            android:textColor="@color/white" />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/searching_terminal_toolbar"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:id="@+id/terminal_text_brand_connectivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/terminal_text_brand"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/terminal_text_brand_connectivity_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/request_detail_initial_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/terminal_text_model_appplication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/terminal_text_model"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/terminal_text_model_appplication_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/request_detail_initial_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/terminalMarcaButton"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="@string/terminal_button_brand" />
            <Button
                android:id="@+id/terminalModeloButton"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="@string/terminal_button_model" />
            <Button
                android:id="@+id/terminal_button_connectivity"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/terminal_button_connectivity" />
            <Button
                android:id="@+id/terminal_button_application"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/terminal_button_application" />
        </LinearLayout>
        <TextView
            android:id="@+id/terminalCantidadTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/terminal_text_count"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <EditText
            android:id="@+id/terminalCantidadEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:maxLength="4" />
        <Button
            android:id="@+id/button_add_terminal"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:text="@string/terminal_button_add" />
    </LinearLayout>
</RelativeLayout>