<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LogComentarioActivity" >

    <TextView
        android:id="@+id/logcomUsuarioTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logcom_usuario_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/logcomUsuarioTextViewContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_detail_initial_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/logcomFechaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logcom_fecha_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/logcomFechaTextViewContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_detail_initial_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/logcomComentarioTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logcom_comentario_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/logcomComentarioTextViewContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_detail_initial_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>